get page back to working

--- a/views/input.erb
+++ b/views/input.erb
@@ -6,10 +6,16 @@
 
 <form action="/" method="post">
   <div class="form-group">
-    <label for="name">Add your item</label>
-    <input id="name" name="name" class="form-control" type="text">
-    <label for="rank">Rank your item</label>
-    <input id="rank" name="rank" class="form-control" type="text">
+    <label for="first_name">First Name:</label>
+    <input id="first_name" name="first_name" class="form-control" type="text">
+    <label for="last_name">Last Name:</label>
+    <input id="last_name" name="last_name" class="form-control" type="text">
+    <label for="job_title">Job Title:</label>
+    <input id="job_title" name="job_title" class="form-control" type="text">
+    <label for="company">Company Name:</label>
+    <input id="company" name="company" class="form-control" type="text">
+    <label for="contact_type">Contact Type:</label>
+    <input id="contact_type" name="contact_type" class="form-control" type="text">
   </div>
-  <button type="submit" class="btn">Go!</button>
+  <button type="submit" class="btn">Add Contact:</button>
 </form>
